# trajectoryGuideModules

./: .gitignore  CMakeLists.txt  LICENSE  README.md
anatomicalLandmarks/: CMakeLists.txt  anatomicalLandmarks.py
anatomicalLandmarks/Resources/UI/: anatomicalLandmarks.ui
dataImport/: CMakeLists.txt  dataImport.py
dataImport/Resources/UI/: dataImport.ui
dataView/: CMakeLists.txt  dataView.py
dataView/Resources/UI/: dataView.ui
frameDetect/: CMakeLists.txt  frameDetect.py
frameDetect/Resources/UI/: frameDetect.ui
helpers/: __init__.py  default_electrode_parameters.json  helpers.py  variables.py
intraopPlanning/: CMakeLists.txt  intraopPlanning.py
postopLocalization/: CMakeLists.txt  postopLocalization.py
postopProgramming/: CMakeLists.txt  postopProgramming.py
preopPlanning/: CMakeLists.txt  preopPlanning.py
registration/: CMakeLists.txt  registration.py
resources/: leksell_coordinates.fcsv  space-leksellg_label-all_localizer.vtk
resources/code/: spherical_coord_plot.py
resources/frames/: leksellg_frame.json
resources/imgs/: leksell.FCStd  leksell.FCStd1
resources/models/: alphaomega_neuroprobe_10mm.stl  alphaomega_neuroprobe_3mm_micromacro_25mm_above.stl  arc_collar.stl  arc_collar.vtk  frame-brw_label-all_pole.vtk  frame-leksellg_label-all_pole.vtk  space-leksellg_label-all_localizer.vtk
resources/settings/: electrodes.json  model_color.json  model_visibility.json  template_model_colors.json  template_model_colors_old.json  trajectoryGuide_settings.json
settingsPanel/: CMakeLists.txt  settingsPanel.py
(+1073 files in other folders)
